# HybridPipeline

./: .gitignore  CLAUDE.md  E2E_TEST_GUIDE.md  PHYSICS_ENGINE_ANALYSIS.md  README.md  REFACTORING_SUMMARY.md  TEST.md  TROUBLESHOOTING.md  architecture.md  docker-compose.yaml  feature.collision.md  frontend-refactoring-design.md
backend/: README_TRANSPORT.md  pyproject.toml  requirements.txt
backend/renderer/: data_types.py  main.py  renderer_service.py
backend/renderer/encoders/: __init__.py  base.py  h264.py  jpeg.py  raw.py
backend/renderer/scene_renderers/: base.py  gaussian_state.py  optimization_params.py  static_gaussian.py  streamable_gaussian.py
backend/renderer/utils/: color_utils.py  depth_utils.py  frame_buffer.py  protocol.py
backend/src/: gaussian_scene.py  server.py  session.py  ws_handler.py
backend/transport/: __init__.py  main.py  protocol_converter.py  service.py
backend/transport/adapters/: __init__.py  base.py  unix_socket_adapter.py  websocket_adapter.py
feature/depth_collision/: camera_manager.py  collision_detector.py  object_controller.py  physics_engine.py  physics_playback_manager.py  project_loader.py  rendering_coordinator.py  scene_builder.py  transform_math.py  transform_to_matrix.py  triple_world_renderer.py
frontend/: REFACTORING_PLAN.md  index.html  package-lock.json  package.json  vite.config.js
frontend/docs/: ARCHITECTURE.md
frontend/src/: color-worker.ts  debug-logger.ts  decode-worker.ts  depth-worker.ts  main.ts  (+6 more)
research/backend-feedforward-20251021/hue-depth-encoding/: .gitignore  README.md  analysis.py  dev-requirements.in  doc_plots.py  pyproject.toml
research/backend-feedforward-20251021/hue-depth-encoding/huecodec/: __init__.py  codec.py
(+45 files in other folders)
