[project]
name = "backend"
version = "0.1.0"
description = "Hybrid Pipeline Server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch==2.5.1",
    "torchvision==0.20.1",
    "opencv-python>=4.12.0.88",
    "gsplat>=1.5.3",
    "websockets>=15.0.1",
    "imageio>=2.37.0",
    "pynvvideocodec>=2.0.2",
    "cupy-cuda12x>=13.6.0",
    "tqdm>=4.67.1",
    "scipy==1.13.1",
    "plyfile>=1.1.2",
    "open3d>=0.19.0",
    "simple-knn",
    "nvidia-nvimgcodec-cu12>=0.6.0.32",
    "kornia>=0.8.1",
]

[tool.uv.extra-build-dependencies]
git = ["torch"]

[tool.uv]
index-strategy = "first-index"

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true 

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }
torchaudio = { index = "pytorch-cu121" }
simple-knn = { path = "../research/gaussian-splatting/submodules/simple-knn" }
