[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.11"
authors = [{ name = "Christoph Heindl"}]
name = "huecodec"
dynamic = ["dependencies", "optional-dependencies", "version"]

[project.urls]
Homepage = "https://github.com/cheind/hue-depth-encoding/"

[tool.setuptools.packages.find]
where = ["."] 
include = ["huecodec*"]

[tool.setuptools.dynamic]
version = {attr = "huecodec.version.__VERSION__"}
dependencies = { file = ["requirements.in"] }
optional-dependencies.dev = { file = ["dev-requirements.in"] }
